<resources>
    <string name="app_name">GADS Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="badge_display">badge display</string>
    <string name="user_name">User Name</string>
    <string name="description">Description</string>
    <string name="submit_action_button">Submit</string>
    <string name="splash_screen_image">Splash Screen image</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
</resources>